Use "geocoding" in site description

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "IPinator for OS X"
-description: "Glanceable IP Address Info for OS X"
+description: "Glanceable IP Address Geocoding for OS X"
 tagline: "IP Widget for OS X"
 keywords: [ip address, widget, istat, external ip, ip extension, network, geolocation, ip geocoding, vpn, osx, mac]
 author:
