--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ baseurl: ""
 url: http://ipinator.kaishin.co
 future: false
 show_drafts: false
-limit_posts: 0
+gems:
+  - jekyll-sitemap
 
 markdown: kramdown
 kramdown:
