--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "IPinator for OS X"
 description: "Glanceable IP Address Geocoding for OS X"
-tagline: "IP Widget for OS X"
-keywords: [ip address, widget, istat, external ip, ip extension, network, geolocation, ip geocoding, vpn, osx, mac]
+tagline: "IP Widget for OS X Yosemite"
+keywords: [ip address, widget, notification center widget, external ip, ip extension, network, geolocation, ip geocoding, vpn, osx, mac, yosemite]
 author:
   name: "Reda Lemeden"
 
