--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "IPinator for OS X"
-description: "Glanceable IP Address Geocoding for OS X"
+description: "Elegant IP Address Geocoding for OS X"
 tagline: "IP Widget for OS X Yosemite"
 keywords: [ip address, widget, notification center widget, external ip, ip extension, network, geolocation, ip geocoding, vpn, osx, mac, yosemite]
 author:
